tdf#164040 Expose XGridDataListener type in SortableGridDataModel

It had been introduced in commit de9dba9275aff2863978f7f665685d54ef82b0ad
(gridsort: introduce XSortableGridDataModel::removeColumnSort, 2011-01-18),
but in getTypes, an explicit exclusion for it had been made.

Change-Id: I4915949b26ef15905ec810aa54e69d0e62100b90
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177256
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins